[project]
name = "ECC_Exercise"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "k-sunako", email = "dd.kazumasa@gmail.com"},
]
dependencies = ["numpy>=2.3.2", "scipy>=1.16.1", "python-lsp-server[all]>=1.13.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
